--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "ams-cli",
-  "version": "1.0.0",
+  "version": "1.0.1",
   "description": "Arcturus Emulator CLI Project for Auto-Updating and Plugin Repository",
   "main": "index.js",
   "scripts": {
@@ -17,6 +17,9 @@
   },
   "homepage": "https://github.com/Dippys/AMS-CLI#readme",
   "dependencies": {
-    "readline-sync": "^1.4.10"
+    "adm-zip": "^0.5.9",
+    "axios": "^1.2.1",
+    "readline-sync": "^1.4.10",
+    "unzipper": "^0.10.11"
   }
 }
