--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -8,6 +8,7 @@ jobs:
   sync:
     runs-on: self-hosted
     name: Git Repo Sync
+    timeout-minutes: 1
     steps:
     - uses: actions/checkout@v2
       with:
